--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 </head>
 
 <body>
+  <header><img src="images/logo.svg" alt="logo"></header>
 
   <main>
-    Build The Community Your Fans Will Love
+    <img src="images/illustration-mockups.svg" alt="mockup">
+    <section class="description">
+      <p>Build The Community Your Fans Will Love</p>
 
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-    Create connections with your users as you engage in genuine discussion.
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+        Create connections with your users as you engage in genuine discussion.</p>
 
-    Register
+      <button>Register</button>
+    </section>
   </main>
 
   <footer>
